Fix spacing in score cards

--- a/style.css
+++ b/style.css
@@ -51,10 +51,11 @@ body {
 .player-card,
 .computer-card {
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-grow: 0;
     width: 170px;
     padding: 5px;
+    gap: 5px;
 }
 
 .player-score,
